[tool.poetry]
name = "whatsapp-bot"
version = "0.1.0"
description = ""
authors = ["KairzhanovMurat <murat99010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
